--- a/fly-no-dunks-pick-em.toml
+++ b/fly-no-dunks-pick-em.toml
@@ -15,7 +15,7 @@ kill_timeout = "5s"
   release_command = "/app/bin/migrate"
 
 [processes]
-  app = "/app/bin/classic_clips start"
+  app = "/app/bin/no_dunks_pick_em start"
 
 [env]
   PHX_HOST = "no-dunks-pick-em.fly.dev"
